[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-triage"
version = "1.0.0"
description = "Customer Support Ticket Triage - OpenEnv environment for RL agent training"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "tanx1509" }]
keywords = ["openenv", "reinforcement-learning", "llm", "agents", "triage", "customer-support"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openenv-core[core]>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "openai>=2.7.2",
    "requests>=2.32.3",
]

[project.scripts]
server = "triage.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["triage", "triage.server"]
package-dir = { "triage" = ".", "triage.server" = "server" }
